--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
 </head>
 <body>
-    <a href="main.html" rel="noopener" target="_blank" >! open this link in background !</a>
+    <a href="index.html" rel="noopener" target="_blank" >! open this link in background !</a>
     <br /><br />
     initial width: <input type="text" id="initial_w">
     <br />
